Improve folder structure

--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ARFragment">
+    tools:context=".ui.ARFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/ar_toolbar"
@@ -20,7 +20,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/sceneform_fragment"
-        android:name="com.dewerro.measurer.view.MeasurerArFragment"
+        android:name="com.dewerro.measurer.ui.view.MeasurerArFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
