--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimary"
-    tools:context=".fragments.LoginFragment">
+    tools:context=".ui.LoginFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/login_logo"
