--- a/app/src/main/res/layout/fragment_order_success.xml
+++ b/app/src/main/res/layout/fragment_order_success.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.order.OrderSuccessFragment">
+    tools:context=".ui.order.OrderSuccessFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/success_title"
