--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorPrimary"
-    tools:context=".fragments.SignUpFragment">
+    tools:context=".ui.SignUpFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/login_logo"
